--- a/main.css
+++ b/main.css
@@ -319,22 +319,21 @@ header {
 
 
 #workout {
-  background: black;
-  padding: 50px;
-  border:solid;
+  background: rgb(31, 30, 30);
+  padding: 20px;
+  /* border:solid;
   border-color: red;
   border-left: none;
   border-right: none;
-  
+   */
 }
 
 .title {
-  font-size: 60px;
+  font-size: 3rem;
   text-transform: capitalize;
   color: white;
   text-align: center;
   margin: 0 auto;
-  color: rgb(255, 2, 2);
   padding-bottom: 50px;
 }
 
@@ -343,6 +342,10 @@ header {
   margin:20px 0 ;
   color: white;
   align-items: center;
+  border:solid;
+  border-color: rgb(110, 105, 105);
+  border-radius: 30px;
+  padding: 30px;
 }
 
 
@@ -397,14 +400,14 @@ margin-left: auto;
 
 #Testimonial {
   padding: 40px;
-  background:rgb(255, 255, 255) ;
+  background:rgb(7, 7, 7) ;
 }
 
 .test-title {
   font-size: 40px;
   text-transform: capitalize;
   text-align: center;
-  color: black;
+  color: white;
   font-weight: bolder;
   margin: 25px 0 20px 0;
 }
@@ -478,38 +481,41 @@ margin-left: auto;
 
 
 #gallery {
-  background: black;
+  background: rgb(31, 30, 30);
   padding: 40px;
 }
 
 #gallery .title{
-  font-size: 60px;
+  font-size: 3rem;
   text-transform: capitalize;
-  color: rgb(109, 109, 109);
+  color: white;
   text-align: center;
-  margin: 25px 0 20px 0;
+  margin: 25px 0  0;
 }
 
 .gallery-container {
   max-width: 90vw;
   margin: 0 auto;
-  overflow-x: auto;
 }
 
 .gallery-item{
-  background-color: black;
   color: rgb(204, 202, 202);
-  margin: 20px 0;
+  margin: 10px 0;
   font-weight: bolder;
+
 }
 
 #gallery img{
   width: 100%;
   display: block;
+  border-radius: 30px;
 }
 
 .img-container {
-  position: relative
+  position: relative;
+  width: 100%;
+  display: block;
+  
 }
 
 .gallery-item h4{
@@ -541,7 +547,7 @@ margin-left: auto;
 
 #subscribe {
   padding:40px;
-  background: rgb(63, 62, 62);
+  background: black;
 
 }
 
